--- a/CSS/main.css
+++ b/CSS/main.css
@@ -16,6 +16,10 @@ body {
   background-color: var(--Special-White);
 }
 
+button {
+  cursor: pointer;
+}
+
 /* - Font size (paragraph): 18px */
 /* //////////////////// */
 
