--- a/CSS/main.css
+++ b/CSS/main.css
@@ -463,6 +463,13 @@ button {
   }
 }
 
+@media (max-width: 300px) {
+  .side-nav-bar {
+    max-width: 100vw;
+  }
+}
+
+
 @media (max-height: 700px) {
   /* Nav bar */
   .side-nav-bar {
